--- a/servers/login/mysql-cpp/mysql_cpp.cbp
+++ b/servers/login/mysql-cpp/mysql_cpp.cbp
@@ -24,6 +24,7 @@
 				<Option type="2"/>
 				<Option compiler="gcc"/>
 				<Compiler>
+					<Add directory="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/common"/>
 					<Add directory="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/mysql-cpp"/>
 					<Add directory="/usr/include/c++/7"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/7"/>
@@ -48,6 +49,7 @@
 				<Option type="2"/>
 				<Option compiler="gcc"/>
 				<Compiler>
+					<Add directory="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/common"/>
 					<Add directory="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/mysql-cpp"/>
 					<Add directory="/usr/include/c++/7"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/7"/>
@@ -66,6 +68,12 @@
 				</MakeCommands>
 			</Target>
 		</Build>
+		<Unit filename="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/chick-map/world.cc">
+			<Option target="mysql_cpp"/>
+		</Unit>
+		<Unit filename="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/chick-map/world.h">
+			<Option target="mysql_cpp"/>
+		</Unit>
 		<Unit filename="/mnt/c/Users/moreal-gram/CLionProjects/Ex-Chick-It-Server/lib/mysql-cpp/InputBinder.hpp">
 			<Option target="mysql_cpp"/>
 		</Unit>
