Update cmake version from 3.10 to 3.9.2

--- a/servers/login/CMakeLists.txt
+++ b/servers/login/CMakeLists.txt
@@ -1,19 +1,20 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.9.2)
 
 project(LoginServer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/mysql-cpp ${CMAKE_CURRENT_SOURCE_DIR}/mysql-cpp)
+#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../lib/mysql-cpp ${CMAKE_CURRENT_SOURCE_DIR}/mysql-cpp)
 
 find_package(Threads REQUIRED)
-find_package(Boost REQUIRED COMPONENTS system filesystem)
 
 include_directories(
         src
         ../../lib/base64
-        ../../lib/common)
+        ../../lib/common
+#        ../../lib/mysql-cpp/
+        ../../lib/boost/asio/include)
 
 file(GLOB_RECURSE SOURCES . "*.cc")
 file(GLOB_RECURSE HEADERS . "*.h")
@@ -24,6 +25,6 @@ add_executable(LoginServer
 
 target_link_libraries(LoginServer
         ${CMAKE_THREAD_LIBS_INIT}
-        ${Boost_LIBRARIES}
-        mysql_cpp
-        mysqlclient)
+        )
+#        mysql_cpp
+#        mysqlclient)
