--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@ git
 [submodule "lib/boost/asio"]
 	path = lib/boost/asio
 	url = https://github.com/boostorg/asio.git
+[submodule "lib/mysql-cpp"]
+	path = lib/mysql-cpp
+	url = https://github.com/bskari/mysql-cpp
