Remove boost library and add protobuf3, zmq

--- a/servers/gameplay/src/CMakeLists.txt
+++ b/servers/gameplay/src/CMakeLists.txt
@@ -6,11 +6,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 find_package(Threads REQUIRED)
-find_package(Boost REQUIRED COMPONENTS system filesystem)
 
 include_directories(
-        ../src
-        ../../lib/base64)
+        ../src)
 
 file(GLOB_RECURSE HEADER_LIST "./*.cc")
 file(GLOB_RECURSE SOURCE_LIST "./*.h")
@@ -20,5 +18,4 @@ add_executable(GamePlayServer
         ${SOURCE_LIST})
 
 target_link_libraries(GamePlayServer
-        ${CMAKE_THREAD_LIBS_INIT}
-        ${Boost_LIBRARIES})
+        ${CMAKE_THREAD_LIBS_INIT})
